fix overflow

--- a/assets/css/styles.scss
+++ b/assets/css/styles.scss
@@ -7,8 +7,3 @@ body {
   background-color: #fff;
   margin: 0;
 }
-@media (max-width: 768px) {
-  body{
-    overflow: hidden;
-  }
-}
